--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -109,5 +109,5 @@
 
 <div *ngIf="FacturaIsVisible"> 
   <button class="back-btn" nz-button nzType="primary" (click)="Back()"><i nz-icon nzType="arrow-left"></i></button>
-  <app-digital-invoice [dataInvoice]="dataInvoice" [dataSource]="dataSource" [historicData]="historicData"></app-digital-invoice>
+  <app-digital-invoice [dataInvoice]="dataInvoice" [dataSource]="dataSource" [historicData]="historicData" [typeInvoice]="1"></app-digital-invoice>
 </div>
