--- a/src/app/modules/auth/components/login-page/login-page.component.css
+++ b/src/app/modules/auth/components/login-page/login-page.component.css
@@ -4,12 +4,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 340px;
     transform: translate(-50%, -50%);   
 }
 
 @media (max-width: 300px){
     .login-form {
-        width: 90%;  
+        width: 100%;  
     }
 
 }
@@ -41,4 +42,22 @@ float: right;
 }
 
 
+
+
+.login-form {   
+    border-color: #aaaaaa;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 10%;
+    box-shadow: inset;
+    padding-right:  10px;
+    padding-bottom: 10px;
+    -webkit-box-shadow: 2px 2px 5px #999;
+    -moz-box-shadow: 2px 2px 5px #999;
+    filter: shadow(color=#999999, direction=135, strength=2);
+    background-color: white;
+}
+h3 {
+    text-align: center;
+}
 
