--- a/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
+++ b/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
@@ -55,6 +55,6 @@
 
 <div *ngIf="FacturaIsVisible"> 
   <button class="back-btn" nz-button nzType="primary" (click)="Back()"><i nz-icon nzType="arrow-left"></i></button>
-  <app-digital-invoice [dataInvoice]="dataInvoice"  [dataSource]="dataSource" [historicData]="historicData"></app-digital-invoice>
+  <app-digital-invoice [dataInvoice]="dataInvoice"  [dataSource]="dataSource" [historicData]="historicData" [typeInvoice]="0"></app-digital-invoice>
 
 </div>
