--- a/src/app/modules/auth/components/generete-code/generete-code.component.html
+++ b/src/app/modules/auth/components/generete-code/generete-code.component.html
@@ -1,5 +1,5 @@
 
-<form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+<form nz-form [formGroup]="validateForm" class="login-form">
 
     <h3>Codigo de recuperación</h3>
     <div nz-row class="logo-container">
@@ -15,7 +15,7 @@
         </nz-input-group>
         </nz-form-control>
     </nz-form-item>
-    <button [disabled]="validateForm.invalid" nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [routerLink]="['/login/verify-code']">Solicitar</button>
+    <button [disabled]="validateForm.invalid" nz-button class="login-form-button login-form-margin" [nzType]="'primary'" (click)="submitForm()">Solicitar</button>
     <a [routerLink]="['/login/register']" style="text-align: center;"> <p>Registrate ahora!</p> </a>
     <a [routerLink]="['/login']"  style="text-align: center;"> <p>Iniciar sesion</p> </a>
     
