--- a/src/app/modules/auth/components/verify-code/verify-code.component.html
+++ b/src/app/modules/auth/components/verify-code/verify-code.component.html
@@ -1,5 +1,5 @@
 
-<form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+<form nz-form [formGroup]="validateForm" class="login-form">
 
     <h3>Verificar codigo</h3>
     <div nz-row class="logo-container">
@@ -16,7 +16,7 @@
         </nz-form-control>
     </nz-form-item>
     
-    <button [disabled]="validateForm.invalid" nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Verificar</button>
+    <button [disabled]="validateForm.invalid" nz-button class="login-form-button login-form-margin" [nzType]="'primary'" (click)="submitForm()">Verificar</button>
     <nz-countdown [nzValue]="deadline" [nzTitle]="'Codigo expira en: '" style="text-align: center;"></nz-countdown>
     <a [routerLink]="['/login/register']" style="text-align: center;"> <p>Registrate ahora!</p> </a>
     <a [routerLink]="['/login']"  style="text-align: center;"> <p>Iniciar sesion</p> </a>
