--- a/src/app/modules/menu-layout/components/clients/submit-client-modal/submit-client-modal.component.html
+++ b/src/app/modules/menu-layout/components/clients/submit-client-modal/submit-client-modal.component.html
@@ -28,6 +28,24 @@
                           </div>
             
                         </div>
+                        
+                        <div nz-row class="row-2">
+                          
+                          <div nz-col [nzSpan]="24" class="row3-col1">
+            
+                              <label>Correo</label>
+                              <div nz-row>
+                                <nz-form-item>
+                                  <nz-form-control>
+                                    <input nz-input  class="inputLarge" id="nombre" type="text" placeholder="Correo electronico" formControlName="correo" [disabled]="false" />
+                                  </nz-form-control>
+                                </nz-form-item>
+                              </div>
+              
+            
+                          </div>
+            
+                        </div>
             
                         
                         <div nz-row class="row-1">
