--- a/src/app/modules/menu-layout/components/clients/clients.component.css
+++ b/src/app/modules/menu-layout/components/clients/clients.component.css
@@ -4,3 +4,14 @@
     vertical-align: middle;
     border: 1px solid #ccc;
 }
+
+.card {
+    width:200px;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+}
+
+.logo{
+    width: 100%; height: auto;
+}
