--- a/src/app/modules/menu-layout/components/providers/providers.component.html
+++ b/src/app/modules/menu-layout/components/providers/providers.component.html
@@ -19,14 +19,14 @@
     
   <div nz-col nzOffset="1" *ngFor="let provider of listOfProviders">
   
-      <nz-card style="width:200px;" [nzCover]="coverTemplate" [nzActions]="[actionEdit]">
+      <nz-card class="card" [nzCover]="coverTemplate" [nzActions]="[actionEdit]">
           <nz-card-meta
             nzTitle= {{provider.nombre}}
             nzDescription= {{provider.direccion}}
           ></nz-card-meta>
         </nz-card>
         <ng-template #coverTemplate>
-          <img alt="example" src="{{provider.imagen}}" />
+          <img  class="logo" alt="example" src="{{provider.imagen}}" />
         </ng-template>
         <ng-template #actionEdit>
           <div nz-row nzAlign="middle" nzJustify="center">
