--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -12,11 +12,11 @@
 <hr>
 <div id="content">
     <div class="cabecera">
-        <img style="width: 50px;" src="../../../../assets/Images/LogoSmall.png" alt="Cliente">
+        <!-- <img style="width: 50px;" [src]="" alt="Cliente"> -->
         <h2> {{dataInvoice.contrato.cliente}} </h2>
         <div style="text-align: end;">
-            <p class="direccion"> Dirección: 800 Metros, Camino a la Jutosa, Choloma, Cortés </p>
-            <p class="direccion"> Honduras, Centro América </p>
+            <p class="direccion"> </p>
+            <p class="direccion"></p>
         </div>
     </div>
     <br>
