--- a/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
@@ -20,7 +20,7 @@
                 <nz-form-item  nzFlex>
                   <nz-form-control>
                     <nz-select class="inputMedium" formControlName="medidorId" [(ngModel)]="dataPosition.id" nzAllowClear [nzDisabled]="true">
-                          <nz-option [nzLabel]="dataPosition.sourceId" [nzValue]="dataPosition.id"></nz-option>
+                          <nz-option [nzLabel]="dataPosition.descripcion" [nzValue]="dataPosition.id"></nz-option>
                     </nz-select>
                   </nz-form-control>
                 </nz-form-item>
