--- a/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
@@ -104,7 +104,7 @@
                               </div>
                             </td>
                           <td>{{data.nombre}}</td>
-                          <td>{{data.valor}}</td>
+                          <td>L {{data.valor | number:'1.0':'en-US'}}</td>
                           </tr>
                       </tbody>
                       </nz-table>
