--- a/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
+++ b/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
@@ -93,17 +93,17 @@
           </ng-template>
       
         </div>
-        <div nz-col nzOffset="1">
+        <!-- <div nz-col nzOffset="1">
           <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a global param">
             <nz-option nzLabel="Jack" nzValue="jack"></nz-option>
             <nz-option nzLabel="Lucy" nzValue="lucy"></nz-option>
             <nz-option nzLabel="Tom" nzValue="tom"></nz-option>
           </nz-select>
-        </div>
-
+        </div> -->
+<!-- 
         <div nz-col>
           <button nz-button nzType="primary" nzSize="default"><i nz-icon nzType="plus" nzTheme="outline"></i></button>
-        </div>
+        </div> -->
       </div>
       <br>
 
