--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -112,7 +112,7 @@
 
         </div>
 
-        <div nz-row>
+        <!-- <div nz-row>
             <div nz-col>
             <label>Exportacion de facturas</label>
                 <div nz-row>
@@ -129,7 +129,7 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
         <div nz-row>
             <div nz-col>
