Ajuste visual proveedores

--- a/src/app/modules/menu-layout/components/providers/providers.component.html
+++ b/src/app/modules/menu-layout/components/providers/providers.component.html
@@ -26,7 +26,11 @@
           ></nz-card-meta>
         </nz-card>
         <ng-template #coverTemplate>
-          <img  class="logo" alt="example" src="{{provider.imagen}}" />
+          <img *ngIf="provider.imagen; else NoImage" class="logo" alt="example" src="{{provider.imagen}}" />
+          <ng-template #NoImage>
+            <img class="logo" alt="example" src="https://us.123rf.com/450wm/blankstock/blankstock1408/blankstock140800126/30454176-signo-de-interrogaci%C3%B3n-signo-icono-s%C3%ADmbolo-de-ayuda-signo-de-preguntas-frecuentes-bot%C3%B3n-plano-gris-c.jpg?ver=6" />
+          </ng-template>
+          
         </ng-template>
         <ng-template #actionEdit>
           <div nz-row nzAlign="middle" nzJustify="center">
