--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -84,18 +84,6 @@
             <h5>Detalle de Consumo de Energía</h5>
         </div>
         <div class="detalle-container">
-            <style type="text/css">
-                .tg  {border-collapse:collapse;border-spacing:0;}
-                .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-                  overflow:hidden;padding:10px 5px;word-break:normal;}
-                .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-                  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-                .tg .tg-zk76{background-color:#c0c0c0;border-color:#ffffff;text-align:center;vertical-align:top}
-                .tg .tg-oe15{background-color:#ffffff;border-color:#ffffff;text-align:left;vertical-align:top}
-                .tg .tg-wk8r{background-color:#ffffff;border-color:#ffffff;text-align:center;vertical-align:top}
-                .tg .tg-dou8{background-color:#001529;border-color:inherit;color:#ffffff;text-align:left;vertical-align:top}
-                .tg .tg-hvao{background-color:#c0c0c0;border-color:#ffffff;text-align:left;vertical-align:top}
-                </style>
                 <table class="tg">
                 <thead>
                   <tr>
@@ -191,7 +179,7 @@
 <div class="consumo-container" *ngIf="dataInvoice.cargo">
 <div class="calculo-consumo-container">
     <div>
-        <!-- <table class="table table-bordered table-sm">
+        <table class="table table-bordered table-sm">
             <thead>
                 <tr>
                     <th scope="col">Cargo</th>
@@ -218,7 +206,7 @@
                     <td> xxx </td>
                 </tr>
             </tbody>
-        </table> -->
+        </table>
         <div style="background-color:  #969696; text-align: center;">
             <h6>Ajuste por factor de potencia</h6>
         </div>
@@ -304,5 +292,54 @@
 </div>
     
 </div>
+</div>
+
+
+ 
+<div class="titulos" *ngIf="dataInvoice.cargo">
+    <h5>Origen de la electricidad</h5>
+</div>  
+
+<div class="origen-container">
+
+    <div class="origen-energia">
+        <div>
+            <table class="origen-table" style="table-layout: fixed; width: 100%">
+            <thead>
+              <tr>
+                <th class="tg-ifil">Origen</th>
+                <th class="tg-ifil">Energia (kWh)</th>
+                <th class="tg-ifil">Sobretotal (%)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-g6p1">Generacion solar</td>
+                <td class="tg-8jgo">{{dataInvoice.totalLecturaActivaAjustada * dataInvoice.PPS  | number:'1.0':'en-US' }} kWh</td>
+                <td class="tg-8jgo">{{dataInvoice.PPS * 100  | number:'1.0':'en-US' }} %</td>
+              </tr>
+              <tr>
+                <td class="tg-g6p1">Energia EEH</td>
+                <td class="tg-8jgo">{{ dataInvoice.totalLecturaActivaAjustada - (dataInvoice.PPS * dataInvoice.totalLecturaActivaAjustada)  | number:'1.0':'en-US' }} kWhA</td>
+                <td class="tg-8jgo">{{ (1 -  dataInvoice.PPS )* 100  | number:'1.0':'en-US' }} %</td>
+              </tr>
+              <tr>
+                <td class="tg-g6p1">Total Consumo</td>
+                <td class="tg-8jgo">{{ dataInvoice.totalLecturaActivaAjustada  | number:'1.0':'en-US' }} kWh</td>
+                <td class="tg-8jgo">{{ 100 }} %</td>
+              </tr>
+            </tbody>
+            </table>
+            
+        </div>
+    </div>
+    
+    <div class="matriz">
+        <div style="background-color: #b9b9b9; margin: 1% 3% 1% 3%;">
+            <fusioncharts width="100%" height="100%" type="Pie2d" [dataSource]="pieGraph">
+            </fusioncharts>
+        </div>
+    </div>
+
 </div>
 </div>
