--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -93,7 +93,7 @@
             <td nzRight nzAlign="center">
                 <app-modal-medidores [dataPosition]="data" [listOfZones]="listOfZones" [listOfRates] = "listOfRates" [listOfMeters]="listOfMeters"></app-modal-medidores>
             </td>
-            <td nzAlign="center"  *ngIf="data.clasificacion === 'P'; else Client">
+            <td nzAlign="center"  *ngIf="data.tipoContratoId === 1; else Client">
               <app-factura-ehh [dataPosition]="data"></app-factura-ehh>
             </td>
             <ng-template #Client>   
